--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,6 @@
+nao_main:
+    resource: "@NAOMainBundle/Resources/config/routing.yml"
+    prefix:   /
+
 app:
-    resource: '@AppBundle/Controller/'
-    type: annotation
+
