--- a/src/NAO/MainBundle/Resources/config/routing.yml
+++ b/src/NAO/MainBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 nao_main_homepage:
     path:     /
-    defaults: { _controller: NAOMainBundle:Default:index }
+    defaults: { _controller: NAOMainBundle:Main:index }
