Création page Observation. Création roles: USER,NATURALISTE,ADMIN

--- a/src/NAO/MainBundle/Resources/config/routing.yml
+++ b/src/NAO/MainBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 nao_main_homepage:
     path:     /
-    defaults: { _controller: NAOMainBundle:Main:index }
+    defaults: { _controller: NAOMainBundle:Main:home }
+
+nao_main_observation:
+    path: /observation
+    defaults: {_controller: NAOMainBundle:Main:observation }
