--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,8 +4,18 @@ security:
 
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
-        in_memory:
-            memory: ~
+            in_memory:
+                memory:
+                    users:
+                        user:  { password: userpass, roles: [ 'ROLE_USER' ] }
+                        naturaliste: { password: naturalistepass, roles: ["ROLE_NATURALISTE"]}
+                        admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+    encoders:
+            Symfony\Component\Security\Core\User\User: plaintext
+
+    role_hierarchy:
+        ROLE_ADMIN: [ROLE_NATURALISTE, ROLE_USER]
+        ROLE_NATURALISTE: [ROLE_USER]
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -29,3 +39,6 @@ security:
 
             # https://symfony.com/doc/current/security/form_login_setup.html
             #form_login: ~
+
+    access_control:
+        - { path: ^/admin, roles: ROLE_ADMIN }
