--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -12,6 +12,7 @@ security:
                         admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
     encoders:
             Symfony\Component\Security\Core\User\User: plaintext
+            NAO\USERBUndle\Entity\User: plaintext
 
     role_hierarchy:
         ROLE_ADMIN: [ROLE_NATURALISTE, ROLE_USER]
