--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,48 +1,21 @@
 # To get started with security, check out the documentation:
 # https://symfony.com/doc/current/security.html
 security:
-
-    # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
-            mainProvider:
-                entity:
-                    class: NAO\UserBundle\Entity\User
-                    property: username
-    encoders:
-            NAO\USERBUndle\Entity\User: sha512
+        in_memory:
+            memory: ~
 
-    role_hierarchy:
-        ROLE_ADMIN: [ROLE_NATURALISTE, ROLE_USER]
-        ROLE_NATURALISTE: [ROLE_USER]
+    encoders:
+        Symfony\Component\Security\Core\User\User: plaintext
 
     firewalls:
-        # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
-        mainFireWall:
-            pattern: ^/
-            anonymous: true
-            provider: mainProvider
-            form_login:
-                login_path: security_login_form
-                check_path: security_login_check
-                csrf_provider: security.csrf.token_manager
-                default_target_path: user_dashboard
-                always_use_default_target_path: true
-            logout:
-                path: /security_logout
-                target: /
-            # activate different ways to authenticate
-
-            # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-            #http_basic: ~
-
-            # https://symfony.com/doc/current/security/form_login_setup.html
-            #form_login: ~
+        main:
+            anonymous: ~
+            http_basic: ~
 
     access_control:
-        - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/account/signup, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/account, roles: ROLE_USER }
+        - {path: ^/admin, roles: ROLE_ADMIN}
