--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -2,18 +2,14 @@
 # https://symfony.com/doc/current/security.html
 security:
     providers:
-        in_memory:
-            memory:
-                users:
-                    ryan:
-                        password: ryanpass
-                        roles: 'ROLE_USER'
-                    admin:
-                        password: kitten
-                        roles: 'ROLE_ADMIN'
+        main_provider:
+            entity:
+                class: NAOMainbundle:User
+                property: username
 
     encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
+        NAO\MainBundle\Entity\User:
+            algorithm: bcrypt
 
     firewalls:
         dev:
@@ -23,6 +19,7 @@ security:
         main:
             anonymous: ~
             http_basic: ~
+            provider: main_provider
 
     access_control:
         - {path: ^/admin, roles: ROLE_ADMIN}
