--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -34,11 +34,14 @@ framework:
         log: true
 
 # Twig Configuration
+# Twig Configuration
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    number_format:
+        thousands_separator: ','
     form_themes:
-        - 'bootstrap_3_horizontal_layout.html.twig'
+        - bootstrap_3_layout.html.twig
 
 # Doctrine Configuration
 doctrine:
