--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,15 +1,5 @@
-nao_main:
-    resource: "@NAOMainBundle/Resources/config/routing.yml"
-    prefix:   /
+app_bundle_annotations:
+    resource: "@AppBundle/Controller"
+    type: annotation
 
-login:
-    path: /login
-    defaults:
-        _controller: NAOUserBundle:Security:login
-
-login_check:
-    path: /login_check
-
-logout:
-    path: /logout
 
