--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,25 +1,24 @@
 # To get started with security, check out the documentation:
-# https://symfony.com/doc/current/security.html
+# http://symfony.com/doc/current/book/security.html
 security:
-    providers:
-        main_provider:
-            entity:
-                class: NAOMainbundle:User
-                property: username
 
-    encoders:
-        NAO\MainBundle\Entity\User:
-            algorithm: bcrypt
+    # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
+    providers:
+        in_memory:
+            memory: ~
 
     firewalls:
+        # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
         main:
             anonymous: ~
-            http_basic: ~
-            provider: main_provider
+            # activate different ways to authenticate
 
-    access_control:
-        - {path: ^/admin, roles: ROLE_ADMIN}
+            # http_basic: ~
+            # http://symfony.com/doc/current/book/security.html#a-configuring-how-your-users-will-authenticate
+
+            # form_login: ~
+            # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
