--- a/src/AppBundle/DataFixtures/ORM/fixtures.yml
+++ b/src/AppBundle/DataFixtures/ORM/fixtures.yml
@@ -1,4 +1,4 @@
-MainBundle\Entity\User:
+AppBundle\Entity\User:
     user_{1..10}:
         username: <lastname()>
-        email: testuser+<current()>gmail.com
+        email: testuser+<current()>@gmail.com
