--- a/src/AppBundle/DataFixtures/ORM/fixtures.yml
+++ b/src/AppBundle/DataFixtures/ORM/fixtures.yml
@@ -1,4 +1,5 @@
 AppBundle\Entity\User:
     user_{1..10}:
-        username: <lastname()>
-        email: testuser+<current()>@gmail.com
+        email: guillaume+<current()>@gmail.com
+        plainPassword: iliketurtles
+
