--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,7 +5,7 @@ security:
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
         our_users:
-            entity: {class: AppBundle\Entity\User, property: email}
+            entity: {class: AppBundle\Entity\User, property: username}
 
     encoders:
         AppBundle\Entity\User: bcrypt
@@ -37,4 +37,6 @@ security:
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
     access_control:
         - {path: ^/profil, roles: ROLE_USER }
+        - {path: ^/observation, roles: ROLE_USER }
+        - {path: ^/validation, roles: ROLE_NATURALISTE}
 
