Envoie confirmation register mail OK, Pb inscription directement loggé

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -37,5 +37,9 @@ monolog:
         #    type: chromephp
         #    level: info
 
-#swiftmailer:
-#    delivery_addresses: ['me@example.com']
+swiftmailer:
+    transport: %dev_mailer_transport%
+    host: %dev_mailer_host%
+    username: %dev_mailer_username%
+    password: %dev_mailer_password%
+    spool: { type: memory }
