--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -67,8 +67,8 @@ doctrine:
 
 # Swiftmailer Configuration
 swiftmailer:
-    transport: '%mailer_transport%'
-    host: '%mailer_host%'
-    username: '%mailer_user%'
-    password: '%mailer_password%'
+    transport: %dev_mailer_transport%
+    host: %dev_mailer_host%
+    username: %dev_mailer_username%
+    password: %dev_mailer_password%
     spool: { type: memory }
