--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -22,8 +22,8 @@ monolog:
             process_psr_3_messages: false
 
 swiftmailer:
-    transport: %dev_mailer_transport%
-    host: %dev_mailer_host%
-    username: %dev_mailer_username%
-    password: %dev_mailer_password%
+    transport: %mailer_transport%
+    host: %mailer_host%
+    username: %mailer_user%
+    password: %mailer_password%
     spool: { type: memory }
