Après visio romain

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -87,3 +87,19 @@ ivory_ck_editor:
             heihgt: '250px'
             language: fr
             toolbar: basic
+
+knpu_oauth2_client:
+    clients:
+        # the key "facebook_main" can be anything, it
+        # will create a service: "knpu.oauth2.client.facebook_main"
+        facebook_main:
+            # this will be one of the supported types
+            type: facebook
+            client_id: 887044221464238
+            client_secret: %Facebook_secret%
+            # the route that you're redirected to after
+            # see the controller example below
+            redirect_route: connect_facebook_check
+            # route parameters to pass to your route, if needed
+            redirect_params: {}
+            graph_api_version: v2.3
