--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -37,6 +37,14 @@ services:
         class: AppBundle\Security\LoginFormAuthenticator
         autowire: true
 
+    app.security.my_facebook_authenticator:
+                class: AppBundle\Security\MyFacebookAuthenticator
+                autowire: true
+                # use autowiring, OR you can specify the argument manually
+                # arguments:
+                #     - '@oauth2.registry'
+                #     - '@doctrine.orm.entity_manager'
+                #     - '@router'
     app.doctrine.hash_password_listener:
         class: AppBundle\Doctrine\HashPasswordListener
         autowire: true
@@ -52,4 +60,6 @@ services:
         class: AppBundle\Service\SendResetPasswordMail
         arguments: ['@mailer']
         public: true
+
+
 
