--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -25,6 +25,9 @@ security:
             guard:
                 authenticators:
                     - app.security.login_form_authenticator
+                    - app.security.my_facebook_authenticator
+                entry_point: app.security.login_form_authenticator
+
 
             logout:
                 path: /logout
