--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,8 @@
         "doctrine/orm": "^2.5",
         "egeloen/ckeditor-bundle": "^4.0",
         "incenteev/composer-parameter-handler": "^2.0",
+        "knpuniversity/oauth2-client-bundle": "^1.15",
+        "league/oauth2-facebook": "^1.4",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "symfony/monolog-bundle": "^3.1.0",
