--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -61,5 +61,12 @@ services:
         arguments: ['@mailer']
         public: true
 
+    twig.extension.intl:
+            class: Twig_Extensions_Extension_Intl
+            tags:
+                - { name: twig.extension }
 
-
+    twig.extension.text:
+           class: Twig_Extensions_Extension_Text
+           tags:
+               - { name: twig.extension }
