--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -10,7 +10,7 @@ parameters:
 
 framework:
     #esi: ~
-    #translator: { fallbacks: ['%locale%'] }
+    translator: { fallbacks: ['%locale%'] }
     secret: '%secret%'
     router:
         resource: '%kernel.project_dir%/app/config/routing.yml'
@@ -33,7 +33,6 @@ framework:
     php_errors:
         log: true
 
-# Twig Configuration
 # Twig Configuration
 twig:
     debug:            "%kernel.debug%"
