--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -70,3 +70,10 @@ services:
            class: Twig_Extensions_Extension_Text
            tags:
                - { name: twig.extension }
+
+    twig.extension.date:
+           class: Twig_Extensions_Extension_Date
+           arguments:
+               - "@translator.default"
+           tags:
+               - { name: twig.extension }
