--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
         "doctrine/doctrine-fixtures-bundle": "~2.3",
         "doctrine/orm": "^2.5",
         "egeloen/ckeditor-bundle": "^4.0",
+        "hautelook/alice-bundle": "^1.3",
         "incenteev/composer-parameter-handler": "^2.0",
+        "knplabs/knp-time-bundle": "^1.7",
         "knpuniversity/oauth2-client-bundle": "^1.15",
         "league/oauth2-facebook": "^1.4",
         "sensio/distribution-bundle": "^5.0.19",
