--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "egeloen/ckeditor-bundle": "^4.0",
         "hautelook/alice-bundle": "^1.3",
         "incenteev/composer-parameter-handler": "^2.0",
+        "jms/serializer-bundle": "^2.2",
         "knplabs/knp-time-bundle": "^1.7",
         "knpuniversity/oauth2-client-bundle": "^1.15",
         "league/oauth2-facebook": "^1.4",
