--- a/src/AppBundle/DataFixtures/ORM/fixtures.yml
+++ b/src/AppBundle/DataFixtures/ORM/fixtures.yml
@@ -38,6 +38,36 @@ AppBundle\Entity\Comment:
         user: '@user_*'
         actualite: '@actualite_*'
 
+AppBundle\Entity\Observation:
+    observation_{1..3}:
+        latitude: <latitude($min = -90, $max = 90)>
+        longitude: <longitude($min = -180, $max = 180)>
+        isValidated: <boolean($chanceOfGettingTrue = 50)>
+        updateAt: <dateTimeBetween("-19 days", "now")>
+        bird: '@bird_*'
+        user: '@user_1'
+        picture: <imageUrl($width = 640, $height = 480, 'cats')>
+    observation_{4..30}:
+        latitude: <latitude($min = -90, $max = 90)>
+        longitude: <longitude($min = -180, $max = 180)>
+        isValidated: <boolean($chanceOfGettingTrue = 50)>
+        updateAt: <dateTimeBetween("-19 days", "now")>
+        bird: '@bird_*'
+        user: '@user_*'
+        picture: <imageUrl($width = 640, $height = 480, 'cats')>
+
+AppBundle\Entity\Bird:
+     bird_{1..20}:
+         name: <firstNameFemale>
+         cdName: <word>
+         lbName: <word>
+         url: <url>
+         birdImage: <imageUrl($width = 640, $height = 480, 'cats')>
+
+
+
+
+
 
 
 
