--- a/src/AppBundle/DataFixtures/ORM/fixtures.yml
+++ b/src/AppBundle/DataFixtures/ORM/fixtures.yml
@@ -66,6 +66,7 @@ AppBundle\Entity\Bird:
          lbName: <word()>
          url: <url()>
          birdImage: <imageUrl($width = 640, $height = 480, 'cats')>
+         description: <sentence($nbWords = 80, $variableNbWords = true)>
 
 
 
