--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -33,6 +33,12 @@ services:
     # AppBundle\Service\ExampleService:
     #     arguments:
     #         $someArgument: 'some_value'
+
+
+    import.csvtoarray:
+        class: AppBundle\Service\ConvertCsvToArray
+        public: true
+
     app.security.login_form_authenticator:
         class: AppBundle\Security\LoginFormAuthenticator
         autowire: true
