--- a/src/AppBundle/DataFixtures/ORM/fixtures.yml
+++ b/src/AppBundle/DataFixtures/ORM/fixtures.yml
@@ -50,6 +50,10 @@ AppBundle\Entity\Observation:
         bird: '@bird_*'
         user: '@user_1'
         picture: <imageUrl($width = 640, $height = 480, 'cats')>
+        description: <sentence($nbWords = 20, $variableNbWords = true)>
+        qtyBirds: <randomDigitNotNull()>
+        observedAt: <dateTimeBetween("-40 days", "-20 days")>
+
     observation_{4..30}:
         latitude: <latitude($min = -90, $max = 90)>
         longitude: <longitude($min = -180, $max = 180)>
@@ -58,6 +62,9 @@ AppBundle\Entity\Observation:
         bird: '@bird_*'
         user: '@user_*'
         picture: <imageUrl($width = 640, $height = 480, 'cats')>
+        description: <sentence($nbWords = 20, $variableNbWords = true)>
+        qtyBirds: <randomDigitNotNull()>
+        observedAt: <dateTimeBetween("-40 days", "-20 days")>
 
 AppBundle\Entity\Bird:
      bird_{1..20}:
@@ -65,6 +72,11 @@ AppBundle\Entity\Bird:
          url: <url()>
          picture: <imageUrl($width = 640, $height = 480, 'cats')>
          description: <sentence($nbWords = 80, $variableNbWords = true)>
+         pattes: 'gris'
+         formeBec: 'pointu'
+         plumage: 'rouge'
+         couleurBec: 'jaune'
+
 
 
 
