--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "doctrine/doctrine-fixtures-bundle": "~2.3",
         "doctrine/orm": "^2.5",
         "egeloen/ckeditor-bundle": "^4.0",
+        "friendsofsymfony/jsrouting-bundle": "^2.1",
         "hautelook/alice-bundle": "^1.3",
         "incenteev/composer-parameter-handler": "^2.0",
         "jms/serializer-bundle": "^2.2",
