--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -84,7 +84,13 @@ ivory_ck_editor:
             extraPlugins: 'lineutils,widget,dialog,codesnippet,widgetselection'
         basic_config:
             jquery: true
-            heihgt: '250px'
+            height: '250px'
+            language: fr
+            toolbar: basic
+        my_config:
+            jquery: true
+            height: '325px'
+            widht: '100%'
             language: fr
             toolbar: basic
 
