--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,4 +2,7 @@ app_bundle_annotations:
     resource: "@AppBundle/Controller"
     type: annotation
 
+fos_js_routing:
+    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
+
 
