--- a/src/AppBundle/DataFixtures/ORM/fixtures.yml
+++ b/src/AppBundle/DataFixtures/ORM/fixtures.yml
@@ -49,7 +49,7 @@ AppBundle\Entity\Observation:
         updateAt: <dateTimeBetween("-19 days", "now")>
         bird: '@bird_*'
         user: '@user_1'
-        picture: <imageUrl($width = 640, $height = 480, 'cats')>
+        image: <imageUrl($width = 640, $height = 480, 'cats')>
         description: <sentence($nbWords = 20, $variableNbWords = true)>
         qtyBirds: <randomDigitNotNull()>
         observedAt: <dateTimeBetween("-40 days", "-20 days")>
@@ -61,21 +61,39 @@ AppBundle\Entity\Observation:
         updateAt: <dateTimeBetween("-19 days", "now")>
         bird: '@bird_*'
         user: '@user_*'
-        picture: <imageUrl($width = 640, $height = 480, 'cats')>
+        image: <imageUrl($width = 640, $height = 480, 'cats')>
         description: <sentence($nbWords = 20, $variableNbWords = true)>
         qtyBirds: <randomDigitNotNull()>
         observedAt: <dateTimeBetween("-40 days", "-20 days")>
 
 AppBundle\Entity\Bird:
-     bird_{1..20}:
+     bird_{1..10}:
          name: <firstNameFemale()>
          url: <url()>
-         picture: <imageUrl($width = 640, $height = 480, 'cats')>
+         image: <imageUrl($width = 640, $height = 480, 'cats')>
          description: <sentence($nbWords = 80, $variableNbWords = true)>
          pattes: 'gris'
          formeBec: 'pointu'
          plumage: 'rouge'
          couleurBec: 'jaune'
+     bird_{11..15}:
+              name: <firstNameFemale()>
+              url: <url()>
+              image: <imageUrl($width = 640, $height = 480, 'cats')>
+              description: <sentence($nbWords = 80, $variableNbWords = true)>
+              pattes: 'noir'
+              formeBec: 'long'
+              plumage: 'jaune'
+              couleurBec: 'noir'
+     bird_{16..20}:
+              name: <firstNameFemale()>
+              url: <url()>
+              image: <imageUrl($width = 640, $height = 480, 'cats')>
+              description: <sentence($nbWords = 80, $variableNbWords = true)>
+              pattes: 'marrons'
+              formeBec: 'long'
+              plumage: 'vert'
+              couleurBec: 'noir'
 
 
 
