--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -41,6 +41,6 @@ security:
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
     access_control:
         - {path: ^/profil, roles: ROLE_USER }
-        - {path: ^/observation, roles: ROLE_USER }
+        # - {path: ^/observation, roles: ROLE_USER }
         - {path: ^/validation, roles: ROLE_NATURALISTE}
 
