--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -114,6 +114,5 @@ vich_uploader:
     db_driver: orm
     mappings:
             product_images:
-                uri_prefix: /images/products
-                upload_destination: '%kernel.root_dir%/../web/uploads/images/products'
+                upload_destination: '%kernel.root_dir%/../web/img/observations'
                 namer: vich_uploader.namer_uniqid
