--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -94,6 +94,13 @@ ivory_ck_editor:
             language: fr
             toolbar: basic
 
+vich_uploader:
+    db_driver: orm
+    mappings:
+            product_images:
+                upload_destination: '%kernel.root_dir%/../web/img/observations'
+                namer: vich_uploader.namer_uniqid
+
 knpu_oauth2_client:
     clients:
         # the key "facebook_main" can be anything, it
@@ -102,17 +109,10 @@ knpu_oauth2_client:
             # this will be one of the supported types
             type: facebook
             client_id: 887044221464238
-            client_secret: %Facebook_secret%
+            client_secret: b493e9c5cf4c88cddaa9fd31f8365d2e
             # the route that you're redirected to after
             # see the controller example below
             redirect_route: connect_facebook_check
             # route parameters to pass to your route, if needed
             redirect_params: {}
             graph_api_version: v2.3
-
-vich_uploader:
-    db_driver: orm
-    mappings:
-            product_images:
-                upload_destination: '%kernel.root_dir%/../web/img/observations'
-                namer: vich_uploader.namer_uniqid
